<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/favoritesHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="8dp"
        android:text="@string/favorites"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/searchInput"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/favoritesHeader"
        android:layout_marginTop="4dp"
        android:background="@drawable/search_background"
        android:drawableStart="@android:drawable/ic_menu_search"
        android:hint="@string/search_quotes"
        android:inputType="text"
        android:paddingHorizontal="12dp"
        android:paddingVertical="10dp"
        tools:ignore="Autofill,TextContrastCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favRecycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/searchInput"
        android:layout_marginTop="16dp"
        android:clipToPadding="false"
        android:paddingBottom="8dp" />

    <TextView
        android:id="@+id/emptyTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="32dp"
        android:text="@string/empty_message"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/emptyMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emptyTitle"
        android:layout_marginTop="5dp"
        android:text="@string/empty_message_2"
        android:textAlignment="center"
        android:textSize="16sp"
        android:visibility="gone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/viewQuotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/emptyMessage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/view_quotes"
        android:visibility="gone" />

</RelativeLayout>